# Smart_Trafficking_System-VisionDriveAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  Prototype.py  README.md  app.py  docker-compose.yml  pyproject.toml
config/: config.dev.yaml  config.prod.yaml  config.yaml  settings.py
core/: accident_detection.py  helmet_violation.py  notifier.py  signal_logic.py  signal_runner.py  violation_detection.py  vision_processing.py
dashboard/: dashboard.py
docker/: entrypoint.sh
docs/: README.md  architecture.md  configuration.md  deployment.md  development.md  models.md  violations.md
examples/: prototype_demo.py
scripts/: download_weights.sh  run_dev.sh
services/: data_bus.py
src/visiondrive/: __init__.py  __main__.py  cli.py  constants.py  settings.py
src/visiondrive/api/: __init__.py  app.py  routes.py  schemas.py
src/visiondrive/api/templates/: dashboard.html
src/visiondrive/core/: __init__.py  data_bus.py  overlays.py  pipeline.py
src/visiondrive/models/: __init__.py  base.py  factory.py  registry.py  ultralytics.py
src/visiondrive/notifications/: __init__.py  twilio_sms.py
src/visiondrive/signal/: __init__.py  controller.py  runner.py
src/visiondrive/violations/: __init__.py  _anpr.py  accident.py  helmet.py  red_light.py
stubs/: accident_detection_stub.py  anpr_stub.py
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: test_data_bus.py  test_models_registry.py  test_red_light.py  test_signal_logic.py
