[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visiondrive"
version = "0.2.0"
description = "VisionDrive AI - Smart City traffic monitoring with adaptive signal control and violation detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Panoptyc" }]

dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "torch>=2.2.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
notifications = ["twilio>=9.0"]
ocr = ["easyocr>=1.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["visiondrive[notifications,ocr,dev]"]

[project.scripts]
visiondrive = "visiondrive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
visiondrive = ["api/templates/*.html", "api/static/*"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
packages = ["visiondrive"]
